--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello!
+<!DOCTYPE html>
+<html>
+    <meta charset="utf-8">
+    <head>
+        <title>Exercise 1 - Shapes Puzzle</title>
+        <link rel="stylesheet" href="/Chapter 1/styles.css">
+    </head>
+    <body class='exercise-1'>
+        <h1>Course Exercises - Intro to D3.js</h1>
+        <div>
+            <a href="/Chapter 1\Exercise 1\index.html">Exercise 1</a>
+        </div>
+    </body>
+</html>
+
